fix: Fixing error when removing icon and overflowing text.

--- a/src/sass/plugin.scss
+++ b/src/sass/plugin.scss
@@ -20,17 +20,26 @@
 	&_text {
 		// You can use CSS variables for styling. See declarations for details:
 		// ../../node_modules/@tweakpane/core/lib/sass/common/_defs.scss
+
 		color: var(--in-fg);
 
 		bottom: 2px;
+		display: inline-block;
 		font-size: 0.9em;
+		height: max-content;
 		line-height: 0.9;
+		margin: 0.2rem;
+		max-height: 100%;
+		max-width: 100%;
 		opacity: 0.5;
 		position: absolute;
 		right: 2px;
-		margin: 0.2rem;
 		text-align: right;
+		white-space: normal;
+		width: max-content;
+		word-wrap: break-word;
 	}
+	
 	&_frac {
 		background-color: var(--in-fg);
 		border-radius: 1px;
@@ -86,6 +95,5 @@
 
 // Styles for the button
 .#{$prefix}-btnv_b {
-	
 	margin-top: 10px;
 }
